2005-11-10 Anatoly Sokolov <aesok@pautinka.net>

	* crt1/gcrt1.S: Make labels local, add Id line.

2005-11-10 Anatoly Sokolov <aesok@pautinka.net>

	* libc/stdlib/ctype.S (isxdigit, ispunct, tolower, 
	toupper): Make labels local.
	* libc/stdlib/setjmp.S: add Id line.
	(setjmp): use X_movw instead LOAD_Z.
	(longjmp): use X_movw instead LOAD_X, use X_movw when possible.

2005-11-10 Anatoly Sokolov <aesok@pautinka.net>

	* libc/stdlib/atoi.S: Make labels local, 
	use X_movw instead LOAD_Z.
	* libc/stdlib/atol.S: Make labels local, add Id line, 
	use X_movw instead LOAD_Z.

2005-11-09 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdio/vfscanf.c: fix the return value for starred format
	specifiers, and return the number of assignments rather than the
	number of conversions.
	Fixes bug #14104: sscanf returns number of matches instead of
	number of assignments

2005-11-08 Anatoly Sokolov <aesok@pautinka.net>

	* libc/pmstring/strncat_P.S:  Make labels local, add Id line, 
	use X_movw when possible, use X_movw instead LOAD_X/LOAD_Z.
	* libc/pmstring/strncpy_P.S: (Ditto.)
	* libc/pmstring/memcpy_P.S:  Make labels local, add Id line, 
	use X_movw instead LOAD_X/LOAD_Z.
	* libc/pmstring/strcasecmp_P.S: (Ditto.)
	* libc/pmstring/strcat_P.S: (Ditto.)
	* libc/pmstring/strcmp_P.S: (Ditto.)
	* libc/pmstring/strcpy_P.S: (Ditto.)
	* libc/pmstring/strlcat_P.S: (Ditto.)
	* libc/pmstring/strlcpy_P.S: (Ditto.)
	* libc/pmstring/strlen_P.S: (Ditto.)
	* libc/pmstring/strncasecmp_P.S: (Ditto.)
	* libc/pmstring/strncmp_P.S: (Ditto.)
	* libc/pmstring/strnlen_P.S: (Ditto.)

2005-11-06 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	(Patch submitted by Colin O'Flynn.)
	* include/avr/wdt.h: protect wdt_disable against interrupts,
	resolves bug #14327 overview: wdt_disable() missing a cli

2005-11-05 Anatoly Sokolov <aesok@pautinka.net>

	* libc/string/strcasecmp.S: Make labels local, add Id line, 
	use X_movw instead LOAD_X/LOAD_Z.
	* libc/string/strlwr.S: (Ditto.)